--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "date-fns": "^3.6.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7"
   },
