--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "@react-awesome-query-builder/mui": "^6.2.0",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.2.1",
