--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,7 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "target": "ESNext",         // Ensure this is set to ESNext or ES2015+
-    "lib": ["ES2015", "DOM"],  // Include ES2015 for Promise and async/await
+    "lib": ["DOM", "ES2016"], // Include ES2015 for Promise and async/await
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
