--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-awesome-query-builder/ui": "^6.6.3",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
-    "axios": "^1.7.7",
-    "react-router-dom": "^6.26.1"
-
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/yup": "^0.29.14",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
