--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,9 +1,16 @@
-name: Push image to Amazon ECR and deploy to Amazon EKS
+name: CI/CD
 
 on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+      - 'helm/**'
+      - 'jenkins/**'
+      - 'k8s/**'
+      - 'screenshots/**'
+      - 'terraform/**'
 
 jobs:
   build:
@@ -32,32 +39,32 @@ jobs:
       id: build-and-tag-docker-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: arm-fe-repository
-        IMAGE_TAG: latest
+        ECR_REPOSITORY: arm-fe-repo
+        IMAGE_TAG: ${{ github.run_id }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "IMAGE_URI=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
 
-    - name: Update Helm chart values
-      run: |
-        sed -i "s|repository:.*|repository: ${ECR_REGISTRY}/${ECR_REPOSITORY}|g" helm/values.yaml
-        sed -i "s|tag:.*|tag: ${IMAGE_TAG}|g" helm/values.yaml
-
-  deploy:
+  helm:
     runs-on: ubuntu-latest
 
+    needs: push
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.1
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.TOKEN }}
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
+    - name: Update tag in Helm chart
+      run: |
+        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/arm-fe-chart/values.yaml
 
-      - name: Deploy to EKS using Helm
-        run: |
-          helm upgrade --install arm-fe ./helm -f helm/values.yaml --namespace default --kubeconfig $HOME/.kube/config
+    - name: Commit and push changes
+      run: |
+        git config --global user.email "122134041+goh0622@users.noreply.github.com"
+        git config --global user.name "GitHub Workflows CI/CD"
+        git add helm/arm-fe-chart/values.yaml
+        git commit -m "Update tag in Helm chart"
+        git push
