--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,19 @@ jobs:
         git add helm/arm-fe-chart/values.yaml
         git commit -m "Update tag in Helm chart"
         git push
+    
+    - name: Run Trivy vulnerability scanner in IaC mode
+      uses: aquasecurity/trivy-action@9ab158e8597f3b310480b9a69402b419bc03dbd5 # tag=0.8.0
+      with:
+        scan-type: config
+        hide-progress: false
+        format: sarif
+        scan-ref: helm/arm-fe-chart
+        output: trivy-results.sarif
+        exit-code: 1
+        ignore-unfixed: true
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@312e093a1892bd801f026f1090904ee8e460b9b6 # v2.1.34
+      with:
+        sarif_file: trivy-results.sarif
