--- a/helm/arm-fe-chart/templates/deployment.yaml
+++ b/helm/arm-fe-chart/templates/deployment.yaml
@@ -18,4 +18,22 @@ spec:
       - name: arm-fe
         image: 654654435122.dkr.ecr.ap-southeast-1.amazonaws.com/arm-fe-repo:{{ .Values.image.tag }}
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
+          runAsNonRoot: true
+          runAsUser: 10001
+          runAsGroup: 10001
+          readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+          requests:
+            cpu: "250m"
+            memory: "256Mi"
