--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         echo "IMAGE_URI=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
     
     - name: Scan Container image with Trivy
-      uses: aquasecurity/trivy-action@9ab158e8597f3b310480b9a69402b419bc03dbd5 # tag=0.8.0
+      uses: aquasecurity/trivy-action@0.20.0
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: arm-fe-repo
@@ -59,7 +59,7 @@ jobs:
         ignore-unfixed: true
 
     - name: Upload Container image scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@312e093a1892bd801f026f1090904ee8e460b9b6 # v2.1.34
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-container-results.sarif
 
@@ -79,7 +79,7 @@ jobs:
         sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/arm-fe-chart/values.yaml
     
     - name: Run Trivy vulnerability scanner in IaC mode
-      uses: aquasecurity/trivy-action@9ab158e8597f3b310480b9a69402b419bc03dbd5 # tag=0.8.0
+      uses: aquasecurity/trivy-action@0.20.0
       with:
         scan-type: config
         hide-progress: false
@@ -90,6 +90,6 @@ jobs:
         ignore-unfixed: true
 
     - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@312e093a1892bd801f026f1090904ee8e460b9b6 # v2.1.34
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-helm-results.sarif
