Add permission to write file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ on:
       - 'screenshots/**'
       - 'terraform/**'
 
+permissions:
+  security-events: write # To upload sarif files
+
 jobs:
   build:
     runs-on: ubuntu-latest
