--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-awesome-query-builder/ui": "^6.6.3",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "leaflet": "^1.9.4",
