--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-gauge-chart": "^0.4.3",
     "@types/yup": "^0.29.14",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
@@ -61,6 +63,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.3"
   }
 }
