--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,23 +1,11 @@
 {
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "skipLibCheck": true,
     "module": "ESNext",
-    "target": "ESNext",         // Ensure this is set to ESNext or ES2015+
-    "lib": ["DOM", "ES2016"], // Include ES2015 for Promise and async/await
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    },
-    "allowImportingTsExtensions": true
+    "types": ["vite/client", "vitest"]
   },
-  "include": [
-    "src/**/*",
-    "vite.config.ts"],
+  "include": ["vite.config.ts"]
 }
