--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
     "bracketSpacing": true,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
     "printWidth": 100,
-    "tabWidth": 3
+    "tabWidth": 2
 }
