--- a/helm/arm-fe-chart/templates/ingress.yaml
+++ b/helm/arm-fe-chart/templates/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: arm-fe.staging
-    http:
+  - http:
       paths: 
       - path: /
         pathType: Prefix
