--- a/helm/arm-fe-chart/templates/service.yaml
+++ b/helm/arm-fe-chart/templates/service.yaml
@@ -6,7 +6,8 @@ metadata:
     app: arm-fe
 spec:
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 80
     protocol: TCP
   selector:
