--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.1",
+    "@vitest/coverage-istanbul": "^2.1.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
